--- a/opt/index.html
+++ b/opt/index.html
@@ -421,7 +421,8 @@
                         </h1>
                         <p style="font-size: 2.5vh; color: ${C.sub}; max-width: 800px; margin-bottom: 8vh; line-height: 1.6; font-weight: 300;">
                             从网关到显存的深度架构重构<br>
-                            <span style="font-size:2vh; opacity:0.8; font-weight:400;">解决长上下文 (Long Context)、多轮对话 (Multi-turn) 与 结构化输出的瓶颈</span>
+                            <span style="font-size:2vh; opacity:0.8; font-weight:400;">解决长上下文 (Long Context)、多轮对话 (Multi-turn) 与 结构化输出的瓶颈</span><br><br>
+                            <span style="font-size:2.2vh; opacity:1.0; font-weight:400;">AI产品线 臧成杰</span>
                         </p>
                     </div>
                 `
