--- a/AI-Native-Fusion-Engine/index.html
+++ b/AI-Native-Fusion-Engine/index.html
@@ -102,7 +102,7 @@
     <!-- Sidebar Navigation -->
     <nav class="w-full md:w-64 bg-white border-r border-slate-200 flex-shrink-0 z-20 shadow-sm h-full overflow-y-auto no-scrollbar flex flex-col">
         <div class="p-6 border-b border-slate-100 flex-shrink-0">
-            <div class="text-xs font-bold text-indigo-600 uppercase tracking-wider mb-1">战略立项建议书</div>
+            <div class="text-xs font-bold text-indigo-600 uppercase tracking-wider mb-1"></div>
             <h1 class="text-lg font-extrabold text-slate-800 leading-tight">AI-Native Fusion Engine</h1>
             <p class="text-[10px] text-slate-500 mt-1">高性能存算融合数据底座</p>
         </div>
